--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-converter==1.0.0
-Flask==1.1.2
-flask_autodoc==0.1.2
-setuptools==52.0.0
+click==7.1.2
+Flask==1.1.4
+flask-selfdoc==1.3.1a0
+importlib-metadata==4.11.3
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==2.0.1
+pkg_resources==0.0.0
+pytemperature==1.1
+Werkzeug==1.0.1
+zipp==3.8.0
